M2 - Mejoras esteticas, de seguridad, dar persmisos a administrador

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10006,6 +10006,10 @@ h3 {
   cursor: pointer;
 }
 
+.cursor-normal {
+  cursor: initial;
+}
+
 /*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
