--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,29 +1,18 @@
-/* Las siguientes lineas sirven para tener el header arriba, el footer abajo y el content en el centro */
-div#app{
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    min-height: 100vh;
-}
-
-header#header{
-    z-index: 100;
-}
-
-main#main{
-    flex: 1;
-}
-
-footer#footer{
-    z-index: 100;
-}
-
 .contenido{
     margin-top: 70px;
 }
 
+.separator {
+    margin: 3rem 0;
+    border-bottom: 1px dashed #fff;
+}
+
 .text-uppercase {
     letter-spacing: 0.1em;
+}
+
+.text-gray {
+    color: #aaa;
 }
 
 .vertical-nav {
@@ -42,16 +31,14 @@ footer#footer{
     transition: all 0.4s;
 }
 
-
-/* Clases usadas desde js */
 #sidebar.active {
     margin-left: -12rem;
 }
+
 #content.active {
     width: 100%;
     margin: 0;
 }
-
 
 @media (max-width: 768px) {
     #sidebar {
