M4 - Agregada paginacion en admin-user-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4615,14 +4615,14 @@ input[type=button].btn-block {
   margin-left: 0;
   line-height: 1.25;
   color: #fff;
-  background-color: #18bc9c;
+  background-color: #95a5a6;
   border: 0 solid transparent;
 }
 .page-link:hover {
   z-index: 2;
   color: #fff;
   text-decoration: none;
-  background-color: #0f7864;
+  background-color: #6d8082;
   border-color: transparent;
 }
 .page-link:focus {
@@ -4643,14 +4643,14 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #0f7864;
+  background-color: #6d8082;
   border-color: transparent;
 }
 .page-item.disabled .page-link {
   color: #ecf0f1;
   pointer-events: none;
   cursor: auto;
-  background-color: #3be6c4;
+  background-color: #bfc8c9;
   border-color: transparent;
 }
 
