--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -79,16 +79,16 @@ $navbar-dark-hover-color:           $success !default;
 // Pagination
 
 $pagination-color:                  $white !default;
-$pagination-bg:                     $success !default;
+$pagination-bg:                     $secondary !default; // Antes era $success
 $pagination-border-width:           0 !default;
 $pagination-border-color:           transparent !default;
 $pagination-hover-color:            $white !default;
-$pagination-hover-bg:               darken($success, 15%) !default;
+$pagination-hover-bg:               darken($secondary, 15%) !default; // Antes era $success
 $pagination-hover-border-color:     transparent !default;
 $pagination-active-bg:              $pagination-hover-bg !default;
 $pagination-active-border-color:    transparent !default;
 $pagination-disabled-color:         $gray-200 !default;
-$pagination-disabled-bg:            lighten($success, 15%) !default;
+$pagination-disabled-bg:            lighten($secondary, 15%) !default; // Antes era $success
 $pagination-disabled-border-color:  transparent !default;
 
 // List group
