--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10061,6 +10061,78 @@ h3 {
   cursor: initial;
 }
 
+.contenido {
+  margin-top: 70px;
+}
+
+.text-uppercase {
+  letter-spacing: 0.1em;
+}
+
+.vertical-nav {
+  min-width: 10rem;
+  width: 12rem;
+  min-height: 100vh;
+  position: fixed;
+  left: 0;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s;
+}
+
+.page-content {
+  width: calc(100% - 12rem);
+  margin-left: 12rem;
+  transition: all 0.4s;
+}
+
+#sidebar.active {
+  margin-left: -12rem;
+}
+
+#content.active {
+  width: 100%;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  #sidebar {
+    margin-left: -12rem;
+  }
+
+  #sidebar.active {
+    margin-left: 0;
+  }
+
+  #content {
+    width: 100%;
+    margin: 0;
+  }
+
+  #content.active {
+    margin-left: 12rem;
+    width: calc(100% - 12rem);
+  }
+}
+/* Las siguientes lineas sirven para tener el header arriba, el footer abajo y el content en el centro */
+div#app {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  min-height: 100vh;
+}
+
+header#header {
+  z-index: 100;
+}
+
+main#main {
+  flex: 1;
+}
+
+footer#footer {
+  z-index: 100;
+}
+
 /*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
