--- a/resources/sass/miscss/_verticalnav.scss
+++ b/resources/sass/miscss/_verticalnav.scss
@@ -8,23 +8,26 @@
 }
 
 .vertical-nav {
-    min-width: 10rem;
-    width: 12rem;
-    min-height: 100vh;
+    min-width: 11rem;
+    width: 13rem;
+    // min-height: 100vh;
+    overflow-y: auto;
     position: fixed;
     left: 0;
+    top:70px;
+    bottom:56px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.4s;
 }
 
 .page-content {
-    width: calc(100% - 12rem);
-    margin-left: 12rem;
+    width: calc(100% - 13rem);
+    margin-left: 13rem;
     transition: all 0.4s;
 }
 
 #sidebar.active {
-    margin-left: -12rem;
+    margin-left: -13rem;
 }
 
 #content.active {
@@ -34,7 +37,7 @@
 
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -12rem;
+        margin-left: -13rem;
     }
 
     #sidebar.active {
@@ -47,7 +50,7 @@
     }
 
     #content.active {
-        margin-left: 12rem;
-        width: calc(100% - 12rem);
+        margin-left: 13rem;
+        width: calc(100% - 13rem);
     }
 }
