M15 Agregado filtro a tabla de todos los proyectos

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-#filtro-para-usuarios .dtsp-container{
+#filtro-para-tablas .dtsp-container{
     background-color: #008e9236;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
