--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,3 +2,8 @@
     background-color: #008e9236;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+/* Scrool smooth */
+html {
+    scroll-behavior: smooth;
+  }
