Instrucciones para usuario terminada, agregado css para dropdown-menu|item permitiendo poner menus largos

--- a/public/css/instructions/main.css
+++ b/public/css/instructions/main.css
@@ -9,3 +9,8 @@
 #instructions-container section {
     padding-top: 100px;
 }
+
+/* Dropdown menu permite introducir texto en mas de una linea */
+.dropdown-menu,.dropdown-item{
+    white-space: normal;
+}
